Fix font not loading on mobile

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -19,7 +19,8 @@
 }
 
 .header h1 {
-    font-size: 80px;
+    font-family: "Rock Salt", cursive;
+    font-size: 50px;
 }
 
 .socialsView {
