--- a/src/ProjectSection/ProjectSection.module.css
+++ b/src/ProjectSection/ProjectSection.module.css
@@ -10,7 +10,7 @@
 
 .sectionText {
     position: sticky;
-    top: 0;
+    top: 20px;
     z-index: 1;
     box-shadow: 0px 20px 10px 0px rgba(0, 0, 0, 0.5);
 
@@ -18,10 +18,10 @@
     flex-direction: column;
     align-items: center;
 
-    margin: 10px 0 10px 0;
-    padding: 10px 0 10px 0;
+    margin: 20px 0 10px 0;
     background-color: var(--banner-bg-color);
     text-align: center;
+    max-width: 90%;
 }
 
 .sectionText p {
@@ -31,6 +31,12 @@
 
 .projectSection {
     background-color: var(--section-bg-color);
+}
+
+@media (max-width: 799px) {
+    .sectionText p {
+        display: none;
+    }
 }
 
 @media (min-width: 800px) {
