--- a/src/ProjectView/ProjectView.module.css
+++ b/src/ProjectView/ProjectView.module.css
@@ -16,7 +16,7 @@
 }
 
 h1, h2{
-    margin: 10px 0px 0px 0px;
+    margin: 10px 0px 10px 0px;
 }
 
 .project h1 {
